--- a/views/tee-times-create.pug
+++ b/views/tee-times-create.pug
@@ -10,8 +10,8 @@ block content
   +banner(
     'Create A New TeeTime',
     'choose your favorite playstyle.',
-    null,
-    null
+    '/tee-times',
+    'Back to TeeTimes'
   )
 
   main
