--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -22,8 +22,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 33%;
+  width: 38%;
   padding: 2px;
+}
+
+.header-nav__logo a {
+  display: flex;
+}
+
+.fa-golf-ball {
+  font-size: 38px;
+  background-color: rgb(3, 71, 3);
+  margin: 0 12px;
+  color: honeydew
 }
 
 .header-nav__group > a > div {
@@ -40,14 +51,6 @@ footer {
   overflow: auto;
   padding: 4px 0;
 }
-
-/* footer {
-  flex-direction: column;
-  margin: 0 auto;
-  max-width: 650px;
-  text-align: center;
-  color: white;
-} */
 
 .footer-container {
   width: 100%;
@@ -93,6 +96,7 @@ footer {
 }
 
 a > span:hover,
+/* a > i:hover, */
 a:hover {
   color: rgb(255, 115, 0);
   font-weight: 700;
@@ -127,6 +131,7 @@ button:hover {
   text-transform: uppercase;
   transform: translateY(-1px);
 }
+
 .banner {
   padding: 32px;
   background-size: cover;
@@ -143,6 +148,7 @@ button:hover {
   max-width: 650px;
   text-align: center;
 }
+
 .banner__text > h1 {
   font-weight: 600;
   margin-bottom: 9px;
