--- a/views/users-profile.pug
+++ b/views/users-profile.pug
@@ -35,3 +35,6 @@ block content
       h2 Want to tee off?
     .user-profile-button
       button Find Tee Times
+    .user-profile-events
+      h2 Your Events: #{currentEvents.TeeTime.dateTime} 
+      h6 #{currentEvents.TeeTime.description}
