--- a/public/stylesheets/users-profile.css
+++ b/public/stylesheets/users-profile.css
@@ -20,8 +20,8 @@
     "profile stats play"
     "name handicap button"
     "email city ."
-    "age . ."
-    "bio . ."
+    "age . events"
+    "bio . events"
     ;
     grid-template-columns: 25% 25% 50%;
     grid-template-rows: 33% 33% 33%;
@@ -75,6 +75,9 @@
     grid-area: play;
 }
 
+.user-profile-events {
+    grid-area: events;
+}
 
 .user-profile-info h2 {
     font-weight: bold;
