partial completion of user dashboard - just need styling on events

--- a/public/stylesheets/users-profile.css
+++ b/public/stylesheets/users-profile.css
@@ -20,12 +20,13 @@
     "profile stats play"
     "name handicap button"
     "email city ."
-    "age . events"
-    "bio . events"
+    "age events events"
+    "bio events events"
     ;
     grid-template-columns: 25% 25% 50%;
     grid-template-rows: 33% 33% 33%;
     justify-items: center;
+    padding: 10px;
 
 }
 .user-profile-info{
@@ -33,6 +34,7 @@
 
 
 }
+
 
 /* .user-profile-container {
     border-style: groove;
@@ -77,6 +79,17 @@
 
 .user-profile-events {
     grid-area: events;
+    margin: 10px auto;
+    max-width: 1000px;
+    display: flex;
+    justify-content: left; 
+    flex-direction: column;
+}
+
+.user-profile-events h2, h6 {
+    display: block;
+    padding: 8px 0;
+    
 }
 
 .user-profile-info h2 {
@@ -101,4 +114,8 @@
 .user-profile-handicap h2,
 .user-profile-cityId h2 {
     text-decoration: underline;
+}
+
+footer {
+    visibility: hidden;
 }
