--- a/views/tee-times-create-formData.pug
+++ b/views/tee-times-create-formData.pug
@@ -5,12 +5,12 @@ mixin formData(teeTime, playStyle, course)
   select(name='courseId' value=teeTime.courseId)
     option(value='') -- please select a course --
     each course in courses
-      option(value=course.id)= course.name
+      option(value=course.id selected=(teeTime.courseId === course.id))= course.name
 
   select(name='playStyleId' value=teeTime.playStyleId)
     option(value='') -- please select a play style --
     each playStyle in playStyles
-      option(value=playStyle.id)= playStyle.name
+      option(value=playStyle.id selected=(teeTime.playStyleId === playStyle.id))= playStyle.name
 
   .form-group-1
     label(for='date') Date:
@@ -22,7 +22,7 @@ mixin formData(teeTime, playStyle, course)
     label(for='time') Time:
     input(id='time' name='hour' placeholder='8' value=teeTime.hour type='number')
     label(for='time') H
-    input(id='minutes' name='minute' type='number' placeholder='15' value=teeTime.hour)
+    input(id='minutes' name='minute' type='number' placeholder='15' value=teeTime.minute)
     label(for='minutes') M
     select(name='am_pm')
       option(value='am') AM
@@ -34,4 +34,4 @@ mixin formData(teeTime, playStyle, course)
 
   input(type='number' name='numPlayers' placeholder='How many players?' value=teeTime.  numPlayers)
 
-  textarea(name='description' placeholder='Anything else?' value=teeTime.  description)
+  textarea(name='description' placeholder='Anything else?')= teeTime.description
