--- a/views/user-login.pug
+++ b/views/user-login.pug
@@ -9,8 +9,8 @@ block content
   +banner(
     'Welcome Back!',
     'it\'s nice to see you again',
-    '/',
-    null
+    '/signup',
+    'Don\'t have an account?'
   )
 
   br
@@ -31,5 +31,3 @@ block content
       br
       div(class='py-4')
         button(type='submit' class='btn btn-primary') Login
-      div
-        p: a(href='/signup') Don't have an account?
