--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
   +banner(
     "Golfing is a great way to make new friends",
     "but you wont find that out playing alone.",
-    "/signup",
+    "/tee-times",
     "Let's Play"
   )
   .page
@@ -27,18 +27,18 @@ block content
         h2(class='page__text-h2') See what happens
         p(class='page__text-subtext') Thats it, enjoy the game we love.
   .about-container
-          .about-container__img.image-cropper
-            img(src='https://dtt3egpp7rvvz.cloudfront.net/content/uploads/2018/04/16151641/crans-sur-sierre-e1523884629576.jpg')
-          .about-container__text
-            h1(class='about-container__text-h1') It's exciting
-            br
-            p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            br
+    .about-container__img.image-cropper
+      img(src='https://dtt3egpp7rvvz.cloudfront.net/content/uploads/2018/04/16151641/crans-sur-sierre-e1523884629576.jpg')
+    .about-container__text
+      h1(class='about-container__text-h1') It's exciting
+      br
+      p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      br
   .about-container
-          .about-container__text
-            h1(class='about-container__text-h1') We wouldn't meet otherwise
-            br
-            P Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            br
-          .about-container__img.image-cropper
-            img(src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS_1iyvXxBAAwcp63dsaWlzRVCV_2eFcjT-7Q&usqp=CAU')
+    .about-container__text
+      h1(class='about-container__text-h1') We wouldn't meet otherwise
+      br
+      P Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      br
+    .about-container__img.image-cropper
+      img(src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS_1iyvXxBAAwcp63dsaWlzRVCV_2eFcjT-7Q&usqp=CAU')
