--- a/public/stylesheets/courses-splash.css
+++ b/public/stylesheets/courses-splash.css
@@ -13,6 +13,39 @@
     url(https://www.discoverybaygolfcourse.com/wp-content/uploads/sites/5191/2015/07/slide2.jpg);
 }
 
+.course-search {
+  display: flex;
+  justify-content: center;
+  width: 750px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.course-search button {
+  margin: 0 5px;
+}
+
+.course-search input {
+  width: 60%;
+  margin: 8px;
+  height: 55px;
+  border-radius: 7px;
+  border: 2px solid black;
+  background-color: rgb(255, 235, 165);
+  font-size: 1.3em;
+  color: black;
+  padding-left: 10px
+}
+
+.course-search__errors {
+  font-size: 40px;
+  color: black;
+  width: 480px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
 .course-container__img.image-cropper {
   height: 300px;
   width: 300px;
@@ -47,12 +80,4 @@
 
 .course__name {
   font-size: 26px;
-}
-
-.course__location {
-
-}
-
-.course__difficulty {
-
 }
