--- a/views/courses-splash.pug
+++ b/views/courses-splash.pug
@@ -19,7 +19,7 @@ block content
     form(class='course-search' action='/courses/search' method='POST')
       input(type='text' name='searchTerm' placeholder='Search by Name')
       button(type='submit') Search
-      button(type='submit' action='/courses' method='GET') All
+      button(type='submit') All
     if !courses.length
       h1.course-search__errors Sorry, nothing matches that search term
     - var n = 0;
