change title && clean up console log

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
 
   head
       block head
-        title= TeeTime
+        title TeeTime
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/layout.css')
         link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet")
