--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -58,46 +58,65 @@ footer {
 
 .footer-container {
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   box-sizing: border-box;
-  padding: 0 1em;
+  padding: 20px;
+  background-color: rgb(3, 71, 3);
 
-}
-.footer-container__text {
   display: flex;
-  margin: 0 auto;
-  width: 60%;
-}
-
-.footer-container__links {
-  text-align: left;
-  margin: 20px;
-  height: 150px;
-}
-
-.footer-container__links a {
-  display: block;
-  padding: 8px;
-  color: black;
-  font-weight: 700;
-}
-
-.footer-container__ethos {
-  display: flex;
-  margin-right: 0;
   justify-content: center;
   align-items: center;
-  /* margin-top: 20px; */
-  text-align: left;
-  line-height: 1.5em;
-  width: 700px;
-  overflow: hidden;
 }
 
-.footer__github-logo img {
-  width: 100px;
+.footer-container h3 {
+  font-size: 30px;
+  font-weight: 600;
+  width: 200px;
+
+  color: white;
 }
+
+.dev-card {
+  cursor: pointer;
+  /* border: 2px solid lightgray; */
+  border-radius: 10px;
+  padding: 15px;
+  margin: 10px;
+  /* background-color: white; */
+}
+
+.dev-card a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.dev-card img {
+  width: 180px;
+  border-radius: 50%;
+  box-shadow: 0 0 8px 1px lightgray;
+
+  margin-bottom: 20px;
+}
+
+.dev-card .name {
+  font-weight: 600;
+  color: white;
+}
+
+.dev-card img:hover {
+  box-shadow: 0 0 12px 6px rgb(255, 115, 0);
+}
+
+
+
+
+
+
+
+
+
+
 
 a > span:hover,
 a:hover {
