--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -16,6 +16,11 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .header-nav__group {
