--- a/public/stylesheets/users-profile.css
+++ b/public/stylesheets/users-profile.css
@@ -119,21 +119,41 @@ h6 {
   padding: 8px 0;
 }
 
-.user-profile-info h2 {
+.user-profile-name h2 {
   font-weight: bold;
 }
 
-.user-profile-stats h2 {
+.user-profile-email h2 {
   font-weight: bold;
 }
 
-.user-profile-play h2 {
+.user-profile-bio h2 {
+  font-weight: bold;
+}
+
+.user-profile-handicap h2 {
+  font-weight: bold;
+}
+
+.user-profile-cityId h2 {
+  font-weight: bold;
+}
+
+.user-profile-age h2 {
   font-weight: bold;
 }
 
 .user-profile {
   display: flex;
   flex-direction: column;
+  border: 1px solid grey;
+  border-radius: 15px;
+  background-color: ivory;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  width: 1000px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .user-profile-button {
@@ -141,4 +161,12 @@ h6 {
   justify-content: center;
   align-items: flex-start;
   margin-bottom: 20px;
+}
+
+.profile {
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
