--- a/public/stylesheets/users-profile.css
+++ b/public/stylesheets/users-profile.css
@@ -146,7 +146,7 @@ h6 {
 .user-profile {
   display: flex;
   flex-direction: column;
-  border: 1px solid grey;
+  border: 1px solid ivory;
   border-radius: 15px;
   background-color: ivory;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
