messing with card still

--- a/views/users-profile.pug
+++ b/views/users-profile.pug
@@ -21,8 +21,8 @@ block content
         .user-profile-wrapper_second
           //- .user-profile-info
           //-   h2 Profile Info:
-          .user-profile-name
-            h2 #{user.firstName} #{user.lastName}
+          //- .user-profile-name
+          //-   h2 #{user.firstName} #{user.lastName}
           .user-profile-email
             h2 #{user.email}
           .user-profile-bio
