add meta tags to layout.pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,18 @@ html
 
   head
       block head
+        //-----------------META TAGS
+        title TeeTime
+        meta(name="title" content="TeeTime")
+        meta(name="description" content="The social network for golfers! Make and join events to play and meet new partners.")
+
+        meta(property="og:type" content="website")
+        meta(property="og:url" content="https://tee-time-aa.herokuapp.com/")
+        meta(property="og:title" content="TeeTime")
+        meta(property="og:description" content="The social network for golfers! Make and join events to play and meet new partners.")
+        meta(property="og:image" content="https://i.imgur.com/0mPufM0.png")
+        //-----------------------------
+
         title TeeTime
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel='stylesheet' href='/stylesheets/layout.css')
